--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "server": "json-server --watch server/db.json",
     "build": "vite build",
     "lint": "npm run lint-eslint && npm run lint-css",
     "lint-eslint": "eslint --ext .js,.jsx src/ *.js",
@@ -35,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-security": "^1.7.1",
     "husky": "^8.0.3",
+    "json-server": "^0.17.3",
     "postcss-styled-syntax": "^0.4.0",
     "prettier": "^3.0.0",
     "stylelint": "^15.10.1",
