--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "date-fns": "^2.30.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-day-picker": "^8.8.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
