--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
