--- a/.stylelintrc
+++ b/.stylelintrc
@@ -2,5 +2,12 @@
   "extends": [
     "stylelint-config-standard"
   ],
-  "customSyntax": "postcss-styled-syntax"
+  "customSyntax": "postcss-styled-syntax",
+  "rules":{
+    "property-no-vendor-prefix": [true, {
+      "ignoreProperties": [
+          "appearance"
+      ]
+  }]
+  }
 }
