--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint-eslint": "eslint --ext .js,.jsx src/ *.js",
     "lint-css": "stylelint \"src/**/*.{js,jsx}\"",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
