--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@cypress/webpack-preprocessor": "^6.0.0",
     "@reduxjs/toolkit": "^1.9.5",
     "cypress-fail-on-console-error": "^5.0.0",
+    "cypress-real-events": "^1.10.3",
     "date-fns": "^2.30.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
