--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --force",
     "server": "json-server --watch server/db.json",
     "build": "vite build",
     "lint": "npm run lint-eslint && npm run lint-css",
@@ -19,10 +19,14 @@
     "cypress-fail-on-console-error": "^5.0.0",
     "cypress-real-events": "^1.10.3",
     "date-fns": "^2.30.0",
+    "i18next": "^23.5.1",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.1",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.3.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "redux-persist": "^6.0.0",
