--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite --force",
+    "dev": "vite",
     "server": "json-server --watch server/db.json",
     "build": "vite build",
     "lint": "npm run lint-eslint && npm run lint-css",
