--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint-css": "stylelint \"src/**/*.{js,jsx}\"",
     "preview": "vite preview",
     "prepare": "husky install",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "cy:run-e2e": "cypress run --e2e --browser chrome && nyc report --reporter=text-summary"
   },
   "dependencies": {
     "@cypress/webpack-preprocessor": "^6.0.0",
@@ -35,6 +36,7 @@
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.12.4",
     "@vitejs/plugin-react": "^4.0.0",
     "cypress": "^12.17.4",
     "eslint": "^8.45.0",
@@ -52,8 +54,10 @@
     "json-server": "^0.17.3",
     "postcss-styled-syntax": "^0.4.0",
     "prettier": "^3.0.0",
+    "start-server-and-test": "^2.0.1",
     "stylelint": "^15.10.1",
     "stylelint-config-standard": "^34.0.0",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-istanbul": "^5.0.0"
   }
 }
