--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.12.4",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@vitejs/plugin-react": "^4.0.0",
     "cypress": "^12.17.4",
     "eslint": "^8.45.0",
