--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.2",
+    "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.1",
@@ -34,6 +35,7 @@
     "redux-persist": "^6.0.0",
     "styled-components": "^6.0.7",
     "swiper": "^10.3.1",
+    "universal-cookie": "^6.1.1",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
