feat: add hotel admin panel

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cypress-fail-on-console-error": "^5.0.0",
     "cypress-real-events": "^1.10.3",
     "date-fns": "^2.30.0",
+    "formik": "^2.4.5",
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.2",
