--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.4",
     "styled-components": "^6.0.7",
     "swiper": "^10.3.1",
     "universal-cookie": "^6.1.1",
